plugins {
    id 'java'
    id 'application'
}

group 'com.kousenit'
version '1.0'

sourceCompatibility = JavaVersion.VERSION_15
targetCompatibility = JavaVersion.VERSION_15

application {
    mainClassName = 'com.kousenit.fileio.ProcessDictionary'
    applicationDefaultJvmArgs = ['--enable-preview']
}

repositories {
    jcenter()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.6'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
    testImplementation 'org.hamcrest:hamcrest:2.2'
}

tasks.withType(JavaCompile).configureEach {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}
